1061: Adding DomesticStandingOrderConsentsApi + Controller
https://github.com/SecureApiGateway/SecureApiGateway/issues/1061